<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:layout_gravity="center">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="60dp"

            android:layout_marginStart="20dp">

           
            <TextView
                android:id="@+id/greetView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/greet"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="normal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/userView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="27sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="6dp"/>


        </LinearLayout>


    </com.google.android.material.appbar.AppBarLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageUser"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="158dp"
        android:src="@drawable/logoapp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar" />

    <TextView
        android:id="@+id/edtName"
        style="@style/formSignUp"
        android:layout_width="383dp"
        android:layout_height="40dp"
        android:layout_marginTop="27dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:hint="@string/nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageUser" />



    <TextView
        android:id="@+id/edtEmail"
        style="@style/formSignUp"
        android:layout_width="383dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtName" />

    <TextView
        android:id="@+id/edtCPF"
        style="@style/formSignUp"
        android:inputType="number"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:hint="@string/cpf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

    <TextView
        android:id="@+id/edtRG"
        style="@style/formSignUp"
        android:inputType="number"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:hint="@string/rg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

     <TextView
        android:id="@+id/edtAddress"
        style="@style/addressStyle"
        android:layout_width="383dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:hint="@string/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCPF" />

    <TextView
        android:id="@+id/edtRenda"
        style="@style/formSignUp"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:hint="@string/renda"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtCity" />

    <TextView
        android:id="@+id/edtCity"
        style="@style/formSignUp"

        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:hint="@string/city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtAddress" />

    <TextView
        android:id="@+id/edtState"
        style="@style/formSignUp"

        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:hint="@string/state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtAddress" />


    <Button
        android:id="@+id/btnCancelar"
        style="@style/btnCancelar"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/red"
        android:gravity="center"
        android:hint="Voltar"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRenda" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:layout_marginStart="50dp"
        android:text="R$"
        app:layout_constraintBottom_toBottomOf="@+id/edtRenda"
        app:layout_constraintStart_toStartOf="@+id/edtRenda"
        app:layout_constraintTop_toTopOf="@+id/edtRenda"
        />


</androidx.constraintlayout.widget.ConstraintLayout>


