<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewSolicitationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:id="@+id/linearApp"
            >

            <androidx.cardview.widget.CardView

                android:id="@+id/imageUser"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardCornerRadius="250dp">

                <ImageView
                    android:scaleType="centerCrop"
                    android:id="@+id/img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logoapp"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/greetView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/greet"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="normal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/userView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="27sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"

                android:layout_marginStart="6dp"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/exit" />
    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/titlePge"
        android:layout_width="173dp"
        android:layout_height="91dp"
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:text="@string/newSolicitation"
        android:textColor="@color/blue_primary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appbar" />

    <EditText
        android:id="@+id/edtValor"
        style="@style/formSignUp"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:hint="Valor \n Emprestimo"
        android:inputType="number"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/titlePge"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="378dp" />

    <EditText
        android:id="@+id/edtQtdParcelas"
        style="@style/formSignUp"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:hint="@string/qtdParcelas"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/titlePge"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="378dp" />

    <EditText
        android:id="@+id/edtDataParcela"
        style="@style/addressStyle"
        android:inputType="none"
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:hint="@string/primeiraParcela"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtQtdParcelas"/>
        

    <Button
        android:id="@+id/btnCadastro1"
        style="@style/btnConcluir"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="100dp"
        android:hint="@string/Solicitar"
        android:gravity="center"
        android:backgroundTint="@color/blue_primary"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/edtDataParcela"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="674dp" />

    <Button
        android:id="@+id/btnCancelar"
        style="@style/btnCancelar"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/red"
        android:hint="@string/cancelar"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDataParcela"
        tools:layout_editor_absoluteY="674dp" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDataParcela" />



</androidx.constraintlayout.widget.ConstraintLayout>